<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modal_top_image"
        android:layout_marginTop="-40dp"
        android:background="@drawable/background_white_rect">
        <TextView
            android:id="@+id/modal_title_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#111"
            android:gravity="center"
            android:textSize="28dp"
            android:textStyle="bold"
            android:text="@string/insert_birth_date_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/modal_main_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#111"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/insert_birth_date_body"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/modal_title_text"/>
        <TextView
            android:id="@+id/modal_birthdate_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#111"
            android:gravity="center"
            android:textSize="22dp"
            android:text="1999-03-10"
            android:textStyle="bold"
            android:onClick="createDatePicker"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_blue_stroke"
            android:layout_below="@+id/modal_main_text"/>

        <Button
            android:id="@+id/birthdate_certify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/birthdate_certify"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="22dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/background_green_rect"
            android:layout_below="@+id/modal_birthdate_input" />
        <Button
            android:id="@+id/birthdate_cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/birthdate_cancel"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="22dp"
            android:textColor="@color/color_green_primary"
            android:background="@drawable/background_yellow_rect"
            android:layout_below="@+id/birthdate_certify" />
    </RelativeLayout>
    <ImageView
        android:id="@+id/modal_top_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/check_mark"/>

</RelativeLayout>